--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,16 +7,14 @@ import './style/animation.css';
   class="max-w-6xl pt-24 lg:pt-32 pb-16 lg:pb-24 xl:px-5 px-12 relative z-20 justify-center mx-auto flex lg:flex-row flex-col items-center sm:text-center lg:text-left">
   <div class="lg:w-1/2 w-full">
     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 relative sm:text-5xl">
-      <span class="block xl:inline relative">Mejora en <span
-          class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 via-blue-600 to-blue-800">programación</span></span>
-      <span class="block text-5xl sm:text-6xl xl:text-6xl xl:inline-block relative font-black text-black">creando
-        proyectos</span>
+      <span class="block xl:inline relative">Mejora tu lógica de <span
+          class="text-7xl bg-clip-text text-transparent bg-gradient-to-r from-blue-500 via-blue-600 to-blue-800">programación</span></span>
     </h1>
-    <p class="my-5 text-lg text-gray-400 mx-auto sm:text-2xl sm:my-9 sm:max-w-3xl md:leading-tight lg:pr-16">
-      ¡Participa creando proyectos de programación y gana premios mientras subes de nivel!</p>
-    <div class="box-border leading-7 lg:text-left text-gray-900 text-center">
+    <p class="my-5 text-lg text-gray-600 mx-auto sm:text-2xl sm:my-9 sm:max-w-3xl md:leading-tight lg:pr-16">
+      Resuelve retos de programación y katas. ¡Participa en hackathons para ganar premios!</p>
+    <div class="flex gap-x-2 leading-7 lg:text-left text-gray-900 text-center">
       <Button>
-        ¡Quiero participar!
+        ¡Participa gratis!
       </Button>
       <Button variant="secondary">
         ¡Quiero saber más!
