Add linter correct config and format code

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '@layouts/Layout.astro';
-import TopBanner from '@components/TopBanner.astro';
+import Layout from '@layouts/Layout.astro'
+import TopBanner from '@components/TopBanner.astro'
 import Hero from '@components/Hero.astro'
 import Header from '@components/Header.astro'
 import Sponsors from '@components/Sponsors.astro'
@@ -22,7 +22,7 @@ import Form from '@components/Form.astro'
 		<Hero />
 		<Sponsors />
 		<Form />
-		
+
 	</section>
 
 </Layout>
