--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,10 +14,7 @@ import './style/animation.css';
       Resuelve retos de programación y katas. ¡Participa en hackathons para ganar premios!</p>
 		<div class="flex gap-x-2 leading-7 lg:text-left text-gray-900 text-center">
 			<Button>
-        ¡Participa gratis!
-			</Button>
-			<Button variant="secondary">
-        ¡Quiero saber más!
+        ¡Avísame cuando esté disponible!
 			</Button>
 		</div>
 	</div>
