--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,18 +10,20 @@ import Form from '@components/Form.astro'
 <Layout description="Sitio web con todos los retos de programación de midudev" title="Mejora en programación creando proyectos">
 
 	<section class="h-auto bg-white overflow-hidden pb-20">
-		<TopBanner>
-			<span class="md:-ml-10">
-				<span class="md:inline mr-1 hidden">
-					¡No te pierdas los directos en Twitch!
-				</span><a class="underline" href='https://twitch.tv/midudev'>twitch.tv/midudev</a>
-			</span>
-		</TopBanner>
+		<div class="hidden">
+			<TopBanner>
+				<span class="md:-ml-10">
+					<span class="md:inline mr-1 hidden">
+					¿Quieres que te avise cuando esté listo el proyecto?
+					</span><a class="underline" href='https://twitch.tv/midudev'>twitch.tv/midudev</a>
+				</span>
+			</TopBanner>
+		</div>
 
 		<Header />
 		<Hero />
-		<Sponsors />
 		<Form />
+		<Sponsors />
 
 	</section>
 
