--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,25 +1,39 @@
 ---
-import { LoginButton } from '@components/LoginButton';
+import { LoginButton } from '@components/LoginButton'
+import { LinkPill } from '@components/LinkPill'
+import { TwitchIcon } from '@components/TwitchIcon'
 ---
 
-<div class="max-w-6xl mx-auto xl:px-0 px-10 w-full relative z-20 flex justify-between h-20 items-center">
-	<div class="relative flex pr-10 flex-col">
-		<a href="/" class="flex text-3xl leading-none font-black hover:opacity-70 items-center"><img class="w-6 h-6 object-contain" src='/favicon.svg'>retos.dev</a>
-		<small class="flex items-center text-[10px] font-bold pl-1 mt-0 opacity-90">por <a class='hover:opacity-70' href='https://midu.dev'>
-			<img class="pl-0.5 w-16 h-auto object-contain" alt='logo de midudev' src='logo.png' /></a>
-		</small>
-	</div>
+<div class="bg-gray-100">
+	<header class="max-w-6xl mx-auto xl:px-0 px-10 w-full relative z-20 flex justify-between h-20 items-center">
+		<div class="relative flex pr-10 flex-col">
+			<a href="/" class="flex text-3xl leading-none font-black hover:opacity-70 items-center">
+				<img class="w-12 h-12 mr-2 object-contain" src='/favicon.svg'>
+				<span class="flex items-end">
+					retos<span class="text-base align-bottom bg-clip-text text-transparent bg-gradient-to-r from-blue-500 via-blue-600 to-blue-800">.dev</span>
+				</span>
+			</a>
+		</div>
 
-	<div>
-		<a href='/ejercicios'>
-      Ejercicios
-		</a>
-		<a href='/hackathons'>
-      Hackathons
-		</a>
-	</div>
+		<div class="hidden">
+			<a href='/ejercicios'>
+				Ejercicios
+			</a>
+			<a href='/hackathons'>
+				Hackathons
+			</a>
+		</div>
 
-	<div class="relative flex space-x-5 font-medium">
-		<LoginButton client:visible />
-	</div>
+		<div class="relative flex space-x-5 font-medium">
+			<div class="hidden">
+				<LoginButton client:visible />
+			</div>
+
+			<LinkPill color="twitch" href="https://twitch.tv/midudev" newTab>
+				<TwitchIcon class="w-6 h-6" />
+				Sígueme en Twitch
+			</LinkPill>
+		</div>
+	</header>
+
 </div>
