--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Sponsors from '@components/Sponsors.astro'
 import Form from '@components/Form.astro'
 ---
 
-<Layout description="Sitio web con todos los retos de programación de midudev" title="Mejora en programación creando proyectos">
+<Layout description="Mejorar lógica de programación haciendo retos de código" title="retos.dev | Mejora tu lógica de programación haciendo retos de código">
 
 	<section class="h-auto bg-white overflow-hidden pb-20">
 		<div class="hidden">
