--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,16 +4,16 @@ import './style/animation.css';
 ---
 
 <div
-	class="max-w-6xl pt-24 lg:pt-32 pb-16 lg:pb-24 xl:px-5 px-12 relative z-20 justify-center mx-auto flex lg:flex-row flex-col items-center sm:text-center lg:text-left">
+	class="max-w-6xl pt-16 lg:pt-24 pb-16 lg:pb-24 xl:px-5 px-12 relative z-20 justify-center mx-auto flex lg:flex-row flex-col items-center text-center lg:text-left">
 	<div class="lg:w-1/2 w-full">
 		<h1 class="text-4xl tracking-tight font-extrabold text-gray-900 relative sm:text-5xl">
 			<span class="block xl:inline relative">Mejora tu lógica de <span
-				class="text-7xl bg-clip-text text-transparent bg-gradient-to-r from-blue-500 via-blue-600 to-blue-800">programación</span></span>
+				class="text-5xl lg:text-7xl bg-clip-text text-transparent bg-gradient-to-r from-blue-500 via-blue-600 to-blue-800">programación</span></span>
 		</h1>
 		<p class="my-5 text-lg text-gray-600 mx-auto sm:text-2xl sm:my-9 sm:max-w-3xl md:leading-tight lg:pr-16">
       Resuelve retos de programación y katas. ¡Participa en hackathons para ganar premios!</p>
-		<div class="flex gap-x-2 leading-7 lg:text-left text-gray-900 text-center">
-			<Button>
+		<div class="flex gap-x-2 leading-7 justify-center lg:justify-start text-gray-900 text-center">
+			<Button href='#newsletter'>
         ¡Avísame cuando esté disponible!
 			</Button>
 		</div>
