--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Hero from '@components/Hero.astro'
 import Header from '@components/Header.astro'
 import Sponsors from '@components/Sponsors.astro'
 import Form from '@components/Form.astro'
+import { About } from '@components/About'
 ---
 
 <Layout description="Mejorar lógica de programación haciendo retos de código" title="retos.dev | Mejora tu lógica de programación haciendo retos de código">
@@ -23,6 +24,7 @@ import Form from '@components/Form.astro'
 		<Header />
 		<Hero />
 		<Form />
+		<About />
 		<Sponsors />
 
 	</section>
