--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,9 +14,18 @@ const { description, title } = Astro.props as Props
 		<meta name="viewport" content="width=device-width">
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		<title>{title}</title>
-		<meta name="theme-color" content="#ffffff">
+		<meta name="theme-color" content="#09f">
 		<link rel="icon" href="favicon.svg">
 		<meta name="description" content={description}>
+		<meta property="og:title" content={title} />
+		<meta property="og:type" content="website" />
+		<meta property="og:image" content="https://retos.dev/og.png" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:creator" content="@midudev" />
+		<meta name="twitter:site" content="@midudev" />
+		<meta name="twitter:title" content={title} />
+		<meta name="twitter:description" content={description} />
+		<meta name="twitter:image" content="https://retos.dev/og.png" />
 	</head>
 	<body>
 		<slot />
