--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { description, title } = Astro.props as Props
 		<meta name="twitter:title" content={title} />
 		<meta name="twitter:description" content={description} />
 		<meta name="twitter:image" content="https://retos.dev/og.png" />
-		<script src="https://cdn.usefathom.com/script.js" data-site="VOCVITLJ" defer></script>
+		<script src="https://complex-instant.retos.dev/script.js" data-site="VOCVITLJ" defer></script>
 	</head>
 	<body>
 		<slot />
