--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,7 @@ const { description, title } = Astro.props as Props
 		<meta name="twitter:description" content={description} />
 		<meta name="twitter:image" content="https://retos.dev/og.png" />
 		<script src="https://complex-instant.retos.dev/script.js" data-site="VOCVITLJ" defer></script>
+		<style>html { scroll-behavior: smooth; } </style>
 	</head>
 	<body>
 		<slot />
