--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -3,19 +3,22 @@ import LandingNewsletter from '@components/LandingNewsletter'
 ---
 
 <div class='max-w-6xl mx-auto mt-12 mb-48'>
-	<section class='max-w-3xl px-10 mx-auto'>
-		<h2 class="font-bold text-2xl text-gray-700 leading-none text-center">
-			<img class="inline-block w-12 h-12" src="./star-struck.svg" />
-			¿Quieres saber cuándo estará disponible?<br />
-			¡Deja tu correo y te avisaremos!
-		</h2>
+	<div class="px-4">
+		<section id="newsletter" class='transition-all max-w-3xl p-10 border-2 mx-auto'>
+			<h2 class="font-bold text-2xl text-gray-700 leading-none text-center">
+				<img class="block m-auto lg:inline-block w-12 h-12" src="./star-struck.svg" />
+				¿Quieres saber cuándo estará disponible?<br />
+				¡Deja tu correo y te avisaremos!
+			</h2>
 
-		<LandingNewsletter client:visible />
+			<LandingNewsletter client:idle />
 
-		<div class="text-center text-xs text-gray-700">
-			<p>No recibirás spam. Recibirás un correo con información para Aprender JavaScript.</p>
-			<p>Podrás darte de baja cuando quieras.</p>
-		</div>
+			<div class="text-center text-xs text-gray-700">
+				<p>No recibirás spam. Recibirás un correo con información para Aprender JavaScript.</p>
+				<p>Podrás darte de baja cuando quieras.</p>
+			</div>
 
-	</section>
+		</section>
+	</div>
+
 </div>
