--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { About } from '@components/About'
 		<div class="hidden">
 			<TopBanner>
 				<span class="md:-ml-10">
-					<span class="md:inline mr-1 hidden">
+					<span id="newsletter" class="md:inline mr-1 hidden">
 					¿Quieres que te avise cuando esté listo el proyecto?
 					</span><a class="underline" href='https://twitch.tv/midudev'>twitch.tv/midudev</a>
 				</span>
